# opencl-example

./: .gitignore  CMakeLists.txt  README
src/: CMakeLists.txt  example.cpp
